--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -1,1 +1,8 @@
 /* CSS code for the Navbar section. */
+// Styling for the navbar
+#main-nav {
+    padding-top: 10rem;
+    font-size: 18px;
+    padding-bottom: 1rem;
+}
+ 
