Basic CSS setup for the navbar.

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,1 +1,14 @@
 /* CSS code for the Header section. */
+
+#main-header {
+    height: 400px;
+}
+
+/* Bootstrap overrides */
+.jumbotron-heading {
+    padding-top: 50px;
+}
+
+#header-action {
+    margin-top: 30px;
+}
