--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,47 @@
 /* Variables used throughout will go here. */
+/* EFA Color pallete */
 /* CSS code for the Navbar section. */
 #main-nav {
-  padding-top: 5rem;
-  font-size: 18px;
-  padding-bottom: 1rem; }
+  padding-top: 2rem;
+  padding-bottom: 1rem;
+  border-bottom: none;
+  background: transparent;
+  /* Hover for the whole nav.*/ }
+  #main-nav:hover {
+    background: transparent; }
+  #main-nav .icon-bar {
+    width: 22px;
+    left: 3px;
+    transition: all 2.2s;
+    position: relative; }
+    #main-nav .icon-bar:nth-child(2) {
+      transform: rotate(45deg);
+      transform-origin: 10% 10%; }
+    #main-nav .icon-bar:nth-child(3) {
+      opacity: 0; }
+    #main-nav .icon-bar:nth-child(4) {
+      transform: rotate(-45deg);
+      transform-origin: 10% 90%; }
+  #main-nav.collapsed .icon-bar {
+    left: 0; }
+    #main-nav.collapsed .icon-bar:nth-child(2) {
+      transform: rotate(50); }
+    #main-nav.collapsed .icon-bar:nth-child(3) {
+      opacity: 1; }
+    #main-nav.collapsed .icon-bar:nth-child(4) {
+      transform: rotate(0); }
 
 /* CSS code for the Header section. */
+#main-header {
+  height: 400px; }
+
+/* Bootstrap overrides */
+.jumbotron-heading {
+  padding-top: 50px; }
+
+#header-action {
+  margin-top: 30px; }
+
 /* CSS code for the Portfolio section. */
 /* CSS code for the About section. */
 /* CSS code for the Contact section. */
