--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,14 +1,16 @@
 /* CSS code for the Header section. */
-
-#main-header {
-    height: 400px;
+.jumbotron {
+    background: url('http://eleven50.wpengine.com/wp-content/uploads/2017/03/Learning-to-Code5.png?id=21797') no-repeat center center;
+    padding-top: 8rem;
+    padding-bottom: 8rem;
 }
 
-/* Bootstrap overrides */
 .jumbotron-heading {
     padding-top: 50px;
+    font-weight: 400;
 }
 
-#header-action {
-    margin-top: 30px;
+.jumbotron .container {
+    max-width: 60rem;
 }
+  
