Added starter code for hovering and sizing

--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -7,3 +7,14 @@ body {
 header {
     text-align: center;
 }
+
+.section-title h2 {
+    display: inline-block;
+    font-size: 30px;
+    font-weight: 300;
+    line-height: 30px;
+    margin-bottom: 40px;
+    padding-bottom: 10px;
+    position: relative;
+    text-transform: uppercase;
+  }
