--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,16 @@ body {
 header {
   text-align: center; }
 
+.section-title h2 {
+  display: inline-block;
+  font-size: 30px;
+  font-weight: 300;
+  line-height: 30px;
+  margin-bottom: 40px;
+  padding-bottom: 10px;
+  position: relative;
+  text-transform: uppercase; }
+
 /* CSS code for the Navbar section. */
 #main-nav {
   padding-top: 2rem;
@@ -52,6 +62,42 @@ header {
   max-width: 60rem; }
 
 /* CSS code for the Portfolio section. */
+/*Credit to Bootsnip for starter code: https://bootsnipp.com/snippets/7KzGK */
+.portfolio-item a {
+  display: block;
+  line-height: 0;
+  position: relative; }
+
+.portfolio-item a::before {
+  background: #000 none repeat scroll 0 0;
+  content: "";
+  height: 100%;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  transform: scale(0.5);
+  transition: all 0.3s ease 0s;
+  width: 100%; }
+
+.portfolio-item:hover a::before {
+  opacity: .5;
+  transform: scale(1); }
+
+.portfolio-item a::after {
+  color: #fff;
+  content: "+";
+  font-size: 60px;
+  left: 0;
+  position: absolute;
+  right: 0;
+  text-align: center;
+  top: 50%;
+  transform: scale(0);
+  transition: all 0.3s ease 0s; }
+
+.portfolio-item:hover a::after {
+  transform: scale(1); }
+
 /* CSS code for the About section. */
 /* CSS code for the Contact section. */
 /* CSS code for the Footer section. */
