--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -1,1 +1,39 @@
 /* CSS code for the Portfolio section. */
+/*Credit to Bootsnip for starter code: https://bootsnipp.com/snippets/7KzGK */
+
+
+  .portfolio-item a {
+    display: block;
+    line-height: 0;
+    position: relative;
+  }
+  .portfolio-item a::before {
+    background: #000 none repeat scroll 0 0;
+    content: "";
+    height: 100%;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    transform: scale(0.5);
+    transition: all 0.3s ease 0s;
+    width: 100%;
+  }
+  .portfolio-item:hover a::before {
+      opacity: .5;
+      transform: scale(1);
+  }
+  .portfolio-item a::after {
+    color: #fff;
+    content: "+";
+    font-size: 60px;
+    left: 0;
+    position: absolute;
+    right: 0;
+    text-align: center;
+    top: 50%;
+    transform: scale(0);
+    transition: all 0.3s ease 0s;
+  }
+  .portfolio-item:hover a::after {
+      transform: scale(1);
+  }
