--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -1,63 +1,27 @@
 /* CSS code for the Portfolio section. */
-/*Credit to Bootsnip for starter code: https://bootsnipp.com/snippets/7KzGK */
+//Credit to: 
 
-//   .portfolio-item a {
-//     display: block;
-//     line-height: 0;
-//     position: relative;
-//   }
-//   .portfolio-item a::before {
-//     background: #000 none repeat scroll 0 0;
-//     content: "";
-//     height: 100%;
-//     opacity: 0;
-//     position: absolute;
-//     top: 0;
-//     transform: scale(0.5);
-//     transition: all 0.3s ease 0s;
-//     width: 100%;
-//   }
-//   .portfolio-item:hover a::before {
-//       opacity: .5;
-//       transform: scale(1);
-//   }
-//   .portfolio-item a::after {
-//     color: #fff;
-//     content: "+";
-//     font-size: 60px;
-//     left: 0;
-//     position: absolute;
-//     right: 0;
-//     text-align: center;
-//     top: 50%;
-//     transform: scale(0);
-//     transition: all 0.3s ease 0s;
-//   }
-//   .portfolio-item:hover a::after {
-//       transform: scale(1);
-//   }
-
-
-/* Portfolio Section
+/* ------------------------------
+Portfolio Section
 --------------------------------*/
 #portfolio {
     background: #fff;
     padding: 80px 0;
-  }
+}
   
-  #portfolio .portfolio-item {
-    background-position: center center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    position: relative;
-    height: 260px;
-    width: 100%;
-    display: table;
-    overflow: hidden;
-    margin-bottom: 30px;
-  }
+#portfolio .portfolio-item {
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+  height: 260px;
+  width: 100%;
+  display: table;
+  overflow: hidden;
+  margin-bottom: 30px;
+}
   
-  #portfolio .portfolio-item .details {
+#portfolio .portfolio-item .details {
     height: 260px;
     background: #fff;
     display: table-cell;
@@ -65,38 +29,35 @@
     opacity: 0;
     transition: 0.3s;
     text-align: center;
-  }
+}
   
-  #portfolio .portfolio-item .details h4 {
-    font-size: 16px;
-    transition: opacity 0.3s, -webkit-transform 0.3s;
-    transition: transform 0.3s, opacity 0.3s;
+#portfolio .portfolio-item .details h4 {
+    font-size: 25px;
     transition: transform 0.3s, opacity 0.3s, -webkit-transform 0.3s;
-    -webkit-transform: translate3d(0, -15px, 0);
     transform: translate3d(0, -15px, 0);
     font-weight: 700;
-    color: #333333;
-  }
+    color: #000;
+}
   
-  #portfolio .portfolio-item .details span {
+#portfolio .portfolio-item .details span {
     display: block;
-    color: #666666;
-    font-size: 13px;
+    color: $gray;
+    font-size: 18px;
     transition: opacity 0.3s, -webkit-transform 0.3s;
     transition: transform 0.3s, opacity 0.3s;
     transition: transform 0.3s, opacity 0.3s, -webkit-transform 0.3s;
     -webkit-transform: translate3d(0, 15px, 0);
     transform: translate3d(0, 15px, 0);
-  }
+}
   
-  #portfolio .portfolio-item:hover .details {
-    opacity: 0.8;
-  }
+#portfolio .portfolio-item:hover .details {
+    opacity: 0.6;
+}
   
-  #portfolio .portfolio-item:hover .details h4 {
+#portfolio .portfolio-item:hover .details h4 {
     -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
-  }
+}
   
   #portfolio .portfolio-item:hover .details span {
     -webkit-transform: translate3d(0, 0, 0);
