--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -1,1 +1,16 @@
-/* CSS code for the About section. */
+
+/****************************
+About Section
+****************************/
+#about {
+    // background: $blue-green;
+    background: url('../assets/logo/blue-green-bg.jpg') no-repeat center center;
+
+}
+
+.about-panel {
+    visibility: visible; 
+    -webkit-animation-delay: 0.1s; 
+    -moz-animation-delay: 0.1s; 
+    animation-delay: 0.1s;
+}
