--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -2,7 +2,7 @@
 
 body {
     padding: 15px;
-    background: url('http://eleven50.wpengine.com/wp-content/uploads/2017/03/Learning-to-Code5.png?id=21797') repeat center center;
+    background: url('http://eleven50.wpengine.com/wp-content/uploads/2017/03/Learning-to-Code5.png?id=21797') no-repeat center center;
 }
 
 header {
