--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -1,26 +1,22 @@
-/* CSS code for the Navbar section. */
-// Styling for the navbar
-// X idea comes from this codepen: https://codepen.io/canarystudio/pen/MygmQp
-// Uses the rotate to turn the bottom and top icon-bars to 45 degree x's.MIddle opacity is 0, so it's hidden.
-
+/* ------------------------------
+Navbar Section
+--------------------------------*/
 #main-nav {
     padding-top: 2rem;
     padding-bottom: 1rem;
-
     border-bottom: none;
     background: transparent;
-  
-    /* Hover for the whole nav.*/
+
     &:hover {
-      background: transparent;
+        background: transparent;
     }
-  
+
     .icon-bar {
-      width: 22px;
+        width: 22px;
       left: 3px;
       transition: all 2.2s;
       position: relative;
-  
+
       &:nth-child(2) {
         transform: rotate(45deg);
         transform-origin: 10% 10%;
@@ -33,12 +29,12 @@
         transform-origin: 10% 90%;
       }
     }
-  
+
     &.collapsed {
-  
+
       .icon-bar {
         left: 0;
-  
+
         &:nth-child(2) {
           transform: rotate(50);
         }
@@ -48,8 +44,8 @@
         &:nth-child(4) {
           transform: rotate(0);
         }
-      }
+       }
     }
-  }
+}
 
  
