Footer styling started

--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -5,6 +5,7 @@ About Section
 #about {
     // background: $blue-green;
     background: url('../assets/logo/blue-green-bg.jpg') no-repeat center center;
+    font-size: 18px;
 
 }
 
