--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,8 @@ Navbar Section
   padding-top: 2rem;
   padding-bottom: 1rem;
   border-bottom: none;
-  background: transparent; }
+  background: transparent;
+  background-color: #9AD0D5; }
   #main-nav:hover {
     background: transparent; }
   #main-nav .icon-bar {
@@ -122,7 +123,8 @@ Portfolio Section
 About Section
 ****************************/
 #about {
-  background: url("../assets/logo/blue-green-bg.jpg") no-repeat center center; }
+  background: url("../assets/logo/blue-green-bg.jpg") no-repeat center center;
+  font-size: 18px; }
 
 .about-panel {
   visibility: visible;
@@ -155,3 +157,12 @@ About Section
   color: #fff; }
 
 /* CSS code for the Footer section. */
+footer {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  background-color: #53565A;
+  font-size: 18px;
+  color: white; }
+
+footer p {
+  margin-bottom: .25rem; }
