--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -61,3 +61,14 @@ Portfolio Section
     transform: translate3d(0, 0, 0);
   }
   
+  .image-link {
+    cursor: -webkit-zoom-in;
+    cursor: -moz-zoom-in;
+    cursor: zoom-in;
+  }
+  
+  /* aligns caption to center */
+  .mfp-title {
+    text-align: center;
+    padding: 2px 2px;
+  }
