--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -1,5 +1,7 @@
-/* Body section. */
 
+/****************************
+Body Section
+****************************/
 body {
     padding: 15px;
     background: url('http://eleven50.wpengine.com/wp-content/uploads/2017/03/Learning-to-Code5.png?id=21797') no-repeat center center;
