--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -4,9 +4,9 @@
 footer {
     padding-top: 3rem;
     padding-bottom: 3rem;
-    background-color: $gray;
+    background-color: $red;
     font-size: 18px;
-    color: white;
+    color: $green;
 }
   
 footer p {
