--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,61 @@
-body  {
-    background-color: red;
+/* Variables used throughout will go here. */
+/* EFA Color pallete */
+/****************************
+Body Section
+****************************/
+body {
+  background-color: lightcoral; }
 
-}
+/* ------------------------------
+Navbar Section
+--------------------------------*/
+/****************************
+Header Section
+****************************/
+.jumbotron-billboard .img {
+  margin-bottom: 0px;
+  opacity: 0.8;
+  color: #fff;
+  background: #000 url("../assets/cherry-blossoms.jpeg") top center no-repeat;
+  height: 100%;
+  width: 100%;
+  background-size: cover;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1; }
+
+.jumbotron h1 {
+  margin-top: 180px;
+  font-size: 60px;
+  font-weight: bold; }
+
+.jumbotron h2 {
+  margin-top: 50;
+  font-size: 50px;
+  font-weight: bold; }
+
+.jumbotron {
+  position: relative;
+  min-height: 700px;
+  padding-top: 50px;
+  padding-bottom: 50px; }
+
+.jumbotron .container {
+  position: relative;
+  z-index: 2; }
+
+@media screen and (max-width: 768px) {
+  .jumbotron {
+    padding-top: 20px;
+    padding-bottom: 20px; } }
+
+/* ------------------------------
+Portfolio Section
+--------------------------------*/
+/****************************
+About Section
+****************************/
+/* CSS code for the Contact section. */
+/* CSS code for the Footer section. */
