--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -1,3 +1,37 @@
 /* ------------------------------
 Navbar Section
 --------------------------------*/
+.navbar-container {
+    padding: 20px 0 20px 0;
+    font-size: 16px;
+    font-weight: bolder;
+}
+
+.navbar-container a {
+    color: black;
+}
+
+.navbar.navbar-fixed-top.fixed-theme {
+    background-color: grey;
+    border-color: gray;
+    box-shadow: 0 0 5px rgba(0,0,0,.8);
+    color: white;
+}
+
+.navbar.navbar-fixed-top.fixed-theme a {
+    color: white;
+}    
+    
+.navbar-brand.fixed-theme {
+    font-size: 30px;
+}
+
+.navbar-container.fixed-theme {
+    padding: 0;
+}
+
+
+.navbar-container{
+    transition: 0.8s;
+    -webkit-transition:  0.8s;
+}
