--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -3,3 +3,17 @@
 About Section
 ****************************/
 
+#aboutMe{
+    color: black;
+    text-align: left;
+    font-size: 30px;
+}
+
+.headshot {
+    height: 24em;
+    border-color: gray;
+    border-radius: 3em;
+    align-content: center;
+    margin: auto;    
+    display: block;
+}
