--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -18,20 +18,23 @@ Header Section
 }
 
 .jumbotron h1 {
-    margin-top:180px;
-    font-size: 60px;
+    margin-top:200px;
+    font-size: 80px;
     font-weight: bold;
+    font-family: "Belleza", Arial, Helvetica, sans-serif;
+    color: black;
 }
 
-
 .jumbotron h2 {
-    font-size: 50px;
+    font-size: 60px;
     font-weight: bold;
+    font-family: "Belleza", Arial, Helvetica, sans-serif;
+   
 }
 
 .jumbotron {
   position:relative;
-  min-height: 700px;
+  min-height: 800px;
   padding-top:50px;
   padding-bottom:50px;
 }
