--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -48,8 +48,14 @@ label {
 .quote {
     text-align: center;
     font-style: italic;
-    margin-left: 150px;
-    margin-right: 150px;
+    // margin-left: 150px;
+    // margin-right: 150px;
     margin-top: 50px;
     margin-bottom: 50px;
 }
+
+// @media(min-width: 350px) {
+//     .quote {
+//         margin: 50px 50px;
+//     }
+// }
