--- a/css/main.css
+++ b/css/main.css
@@ -90,7 +90,7 @@ Header Section
   margin-bottom: 0px;
   color: #fff;
   background: #000 url("../assets/cherry-blossoms.jpeg") top center no-repeat;
-  border-bottom: 1px solid white;
+  box-shadow: 2px 10px 10px #f0f0f0;
   opacity: 0.7;
   height: 100%;
   width: 100%;
@@ -122,11 +122,6 @@ Header Section
 .jumbotron .container {
   position: relative;
   z-index: 2; }
-
-@media screen and (max-width: 768px) {
-  .jumbotron {
-    padding-top: 20px;
-    padding-bottom: 20px; } }
 
 /* ------------------------------
 Portfolio Section
