--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -5,7 +5,7 @@
     vertical-align: middle;
     background-color: gray;
     color: black;
-    box-shadow: 0 0 5px rgba(0,0,0,.8);
+    box-shadow: 0 0 5px white;
     text-align: center;    
  }
 
