--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -3,7 +3,7 @@
 .footer {
     padding: 30px;
     vertical-align: middle;
-    background-color: gray;
+    background-color: #A7A7A7;
     color: black;
     box-shadow: 0 0 5px white;
     text-align: center;    
