--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -16,7 +16,7 @@ Navbar Section
 /* fixed-theme */
 
 .navbar.navbar-fixed-top.fixed-theme {
-    background-color: grey;
+    background-color: #A7A7A7;
     box-shadow: 0 0 5px white;
 }
 
